Trying to connect to DB

--- a/lbaw-laravel/.env
+++ b/lbaw-laravel/.env
@@ -1,39 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=Thingy
 APP_ENV=local
-APP_KEY=base64:XGi2vcIBgEXjEZhI8IGISuCN2oIriulyRKZecOSrJ4I=
+APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost:8000
 
-LOG_CHANNEL=stack
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=pg!fcp
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
