--- a/lbaw-laravel/.env
+++ b/lbaw-laravel/.env
@@ -1,4 +1,4 @@
-APP_NAME=Thingy
+APP_NAME=Plenum
 APP_ENV=local
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
@@ -17,4 +17,11 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=plenumlbaw@gmail.com
+MAIL_PASSWORD="ifpmvgpsefybbfee"
+MAIL_ENCRYPTION=tls
 
