--- a/lbaw-laravel/.env_production
+++ b/lbaw-laravel/.env_production
@@ -14,3 +14,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=plenumlbaw@gmail.com
+MAIL_PASSWORD="ifpmvgpsefybbfee"
+MAIL_ENCRYPTION=tls
+
