--- a/lbaw-laravel/.env_production
+++ b/lbaw-laravel/.env_production
@@ -5,7 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://lbaw-prod.fe.up.pt:80/demo/
 
 DB_CONNECTION=pgsql
-DB_HOST=10.227.243.16
+DB_HOST=dbm.fe.up.pt
 DB_PORT=5432
 
 BROADCAST_DRIVER=log
@@ -20,4 +20,3 @@ MAIL_PORT=587
 MAIL_USERNAME=plenumlbaw@gmail.com
 MAIL_PASSWORD="ifpmvgpsefybbfee"
 MAIL_ENCRYPTION=tls
-
